@@ -136,3 +136,4 @@ T_286vp8_in_ogg:858944f0b5080149e89f6d845f752e49:passed:20101222-113225:1.052177
 T_287mkvextract_exit_codes:2-2-2-2-2-2:passed:20101222-120655:0.099966851
 T_288identify_files_by_amg:26ab0db90d72e28ad0ba1e22ee510510:passed:20110308-151817:0.026221677
 T_289wav_unsupported_formattag:3:passed:20110314-133958:0.020701503
+T_290seven_bytes_aac_codec_data:d8680e35f0f6b595dce0fcb8af3b6e9e:passed:20110415-123546:0.125981629
